fix overflow issue

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -65,3 +65,13 @@
   padding-bottom: 10px;
   width: 100%;
 }
+
+@media only screen and (max-width: 1080px) and (min-width: 0px) {
+  .pitch {
+    grid-template-rows: 350px 350px 350px;
+  }
+
+  .navbar {
+    grid-template-columns: 5% 20% 20% 20% 5% 23% 2%;
+  }
+}
